deployment/microk8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: restaurant
  labels:
    istio-injection: enabled
