deployment/microk8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: document-design-gateway
  namespace: restaurant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: document-design-gateway
  template:
    metadata:
      labels:
        app: document-design-gateway
    spec:
      securityContext:
        runAsNonRoot: true
      containers:
      - name: app
        image: localhost:32000/restaurant-document-design-gateway:latest
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: "200m"
            memory: "200Mi"
          requests:
            cpu: "100m"
            memory: "100Mi"
