deployment/microk8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: document-design-gateway
  namespace: restaurant
spec:
  selector:
    app: document-design-gateway
  # type: LoadBalancer # Need metallb addon to be enabled in microk8s
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 8080
