deployment/microk8s/base/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: restaurant-gateway
  namespace: restaurant
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - "192.168.0.240"
    port:
      name: http
      number: 80
      protocol: HTTP
