deployment/microk8s/base/sidecar.yaml
apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
 name: restaurant-document-design-gateway
 namespace: restaurant
spec:
  egress:
  - hosts:
    - "istio-system/*"
