deployment/microk8s/base/virtual-service-2.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: restaurant-egress-github
  namespace: restaurant
spec:
  hosts:
  - "github.com"
  gateways:
  - mesh
  - istio-egressgateway
  tls:
  - match:
    - gateways:
      - mesh
      port: 443
      sniHosts:
      - "github.com"
    route:
    - destination:
        host: istio-egressgateway.istio-system.svc.cluster.local
        subset: external-svc-github
        port:
          number: 443
      weight: 100
  - match:
    - gateways:
      - istio-egressgateway
      port: 443
      sniHosts:
      - "github.com"
    route:
    - destination:
        host: github.com
        port:
          number: 443
      weight: 100
