deployment/microk8s/base/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: restaurant-ingress
  namespace: restaurant
spec:
  gateways:
  - restaurant-gateway
  hosts:
  - 192.168.0.240
  http:
  - route:
      - destination:
          host: document-design-gateway.restaurant.svc.cluster.local
          port:
            number: 80
  #- match:
  #  - uri:
  #      prefix: /restaurant/document
  #  route:
  #  - destination:
  #      host: document-design-gateway.restaurant.svc.cluster.local
  #      port:
  #        number: 80
